# flask-ad-service

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/flask_ad_service/: __about__.py  app.py  config.py  database.py  exceptions.py  model.py  typing.py
src/flask_ad_service/crud/: _crud_typing.py  conditions.py  crud_ad.py  crud_comment.py  crud_user.py
src/flask_ad_service/crud/common/: actions.py  decorators.py  exceptions.py  functions.py
tests/: __init__.py  conftest.py  test_app.py
tests/crud/: conftest.py  test_conditions.py  test_crud_ad.py  test_crud_comment.py  test_crud_user.py
tests/crud/common/: test_decorators.py  test_functions.py
tests/faker/: factories.py  test_faker_models.py
tests/model/: conftest.py  test_ad_model.py  test_comment_model.py  test_user_model.py
